@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
   TEZ-3029. Add an onError method to service plugin contexts.
 
 ALL CHANGES:
+  TEZ-3149. Tez-tools: Add username in DagInfo.
   TEZ-2988. DAGAppMaster::shutdownTezAM should return with a no-op if it has been invoked earlier.
   TEZ-3147. Intermediate mem-to-mem: Fix early exit when only one segment can fit into memory
   TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
@@ -393,6 +394,7 @@ INCOMPATIBLE CHANGES
   TEZ-2949. Allow duplicate dag names within session for Tez.
 
 ALL CHANGES:
+  TEZ-3149. Tez-tools: Add username in DagInfo.
   TEZ-2988. DAGAppMaster::shutdownTezAM should return with a no-op if it has been invoked earlier.
   TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
   TEZ-3129. Tez task and task attempt UI needs application fails with NotFoundException
